[gd_scene load_steps=2 format=3 uid="uid://c0mo5uou4mas8"]

[ext_resource type="Script" uid="uid://5m4pm1q0evem" path="res://scenes/menus_pause/menu_pause.gd" id="1_72xy6"]

[node name="MenuPause" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72xy6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ButtonFormation" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Formation"

[node name="ButtonStats" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="ButtonClose" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonFormation" to="." method="_on_button_formation_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonStats" to="." method="_on_button_stats_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
